--- a/inputmethod/mozc-server/Makefile.common
+++ b/inputmethod/mozc-server/Makefile.common
@@ -32,11 +32,10 @@ PYTHON_VERSIONS_INCOMPATIBLE+=	27
 
 BUILD_DEPENDS+=	${PYPKGPREFIX}-gyp>=0.1pre20200512.caa60026e223fc501e8b337fd5086ece4028b1c6:../../devel/gyp
 BUILD_DEPENDS+=	${PYPKGPREFIX}-six-[0-9]*:../../lang/py-six
-BUILD_DEPENDS+=	ninja-build-[0-9]*:../../devel/ninja-build
 
 USE_LANGUAGES=	c c++
 
-USE_TOOLS+=	gmake pkg-config
+USE_TOOLS+=	gmake ninja pkg-config
 GCC_REQD+=	4.7	# for c++11
 
 OPENSSL_CFLAGS=		-I${BUILDLINK_PREFIX.openssl}/include
