cloc: Hard-code manual date instead of using non-portable stat(1) command

--- a/devel/cloc/Makefile
+++ b/devel/cloc/Makefile
@@ -20,7 +20,7 @@ DEPENDS+=	p5-Parallel-ForkManager-[0-9]*:../../devel/p5-Parallel-ForkManager
 
 REPLACE_PERL+=	Unix/cloc
 
-MAKE_ENV+=	PODDATE=`stat -t %Y-%m-%d -f %Sm ${WRKSRC}/cloc`
+MAKE_ENV+=	PODDATE=2021-05-01
 
 NO_BUILD=	yes
 BUILD_DIRS=	Unix
